--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -9,5 +9,5 @@
     ],
     "window.zoomLevel": -1,
     "explorer.confirmDragAndDrop": false,
-    "workbench.iconTheme": "material-icon-theme",
+    "workbench.iconTheme": "material-icon-theme"
 }
