--- a/dotfiles/.aliasesrc
+++ b/dotfiles/.aliasesrc
@@ -1,4 +1,4 @@
-alias nibbler='ssh -i ~/.ssh/nibbler/id_rsa_gateway _filcrespo@nibbler0006.linux.locaweb.com.br'
+alias nibbler='ssh -i ~/.ssh/id_rsa_gateway _filcrespo@nibbler0006.linux.locaweb.com.br'
 
 alias ..="cd .."
 
