--- a/dotfiles/.gitpromptrc
+++ b/dotfiles/.gitpromptrc
@@ -13,13 +13,13 @@ function _git_prompt() {
         fi
         if [[ "$git_status" =~ On\ branch\ ([^[:space:]]+) ]]; then
             branch=${BASH_REMATCH[1]}
-            test "$branch" != master || branch=' '
+            test "$branch" != master || branch='master'
         else
             # Detached HEAD.  (branch=HEAD is a faster alternative.)
             branch="(`git describe --all --contains --abbrev=4 HEAD 2> /dev/null ||
                 echo HEAD`)"
         fi
-        echo -n '\[\e[0;37;'"$ansi"';1m\]'"$branch"'\[\e[0m\] '
+        echo -n '\[\e[0;37;'"$ansi"';1m\]['"$branch"']\[\e[0m\] '
     fi
     shopt -u nocasematch
 }
