--- a/dotfiles/.aliasesrc
+++ b/dotfiles/.aliasesrc
@@ -3,6 +3,10 @@ alias vpn='sudo openfortivpn'
 alias ..="cd .."
 alias c="code ."
 alias g="git"
+alias loca="cd ~/workspace/loca"
+alias my="cd ~/workspace/my"
+alias gift="docker exec -ti gift_web bash"
+alias add="ssh-add ~/.ssh/id_rsa_gateway"
 
 function git_clean_merged_branches(){
   git checkout master
