--- a/dotfiles/.aliasesrc
+++ b/dotfiles/.aliasesrc
@@ -2,10 +2,8 @@ alias nibbler='ssh -i ~/.ssh/id_rsa_gateway _filcrespo@nibbler0006.linux.locaweb
 alias vpn='sudo openfortivpn'
 alias ..="cd .."
 alias c="code ."
-alias g="git"
+alias r="rubymine ."
+alias p="pycharm-professional ."
 alias loca="cd ~/workspace/loca"
 alias my="cd ~/workspace/my"
-alias gift="docker exec -ti gift_web bash"
 alias add="ssh-add ~/.ssh/id_rsa_gateway"
-alias hoje="cat ~/workspace/loca/ponto"
-alias ponto='date +"%H:%M" >> ~/workspace/loca/ponto'
