--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -7,7 +7,6 @@
         80,
         105
     ],
-    "window.zoomLevel": 0,
     "explorer.confirmDragAndDrop": false,
     "workbench.iconTheme": "material-icon-theme",
     "editor.tabSize": 2,
@@ -25,6 +24,7 @@
     "scm.alwaysShowRepositories": true,
     "diffEditor.ignoreTrimWhitespace": false,
     "jupyter.askForKernelRestart": false,
-    "jupyter.sendSelectionToInteractiveWindow": true
+    "jupyter.sendSelectionToInteractiveWindow": true,
+    "window.zoomLevel": 1
 }
 
