--- a/dotfiles/.aliasesrc
+++ b/dotfiles/.aliasesrc
@@ -6,6 +6,6 @@ alias psg="ps aux | grep "
 alias c="code ."
 alias r="rubymine ."
 alias p="pycharm-professional ."
-alias loca="cd ~/workspace/loca"
-alias my="cd ~/workspace/my"
+alias loca="cd ~/Workspace/loca"
+alias my="cd ~/Workspace/my"
 alias add="ssh-add ~/.ssh/id_rsa_gateway"
