add live and clear vscode

--- a/live/twitch/basic.ini
+++ b/live/twitch/basic.ini
@@ -4,8 +4,8 @@ Name=twitch
 [Video]
 BaseCX=1920
 BaseCY=1080
-OutputCX=853
-OutputCY=480
+OutputCX=1920
+OutputCY=1080
 FPSType=0
 FPSCommon=30
 
@@ -19,3 +19,21 @@ RecQuality=Stream
 
 [Output]
 Mode=Simple
+
+[AdvOut]
+RescaleRes=2560x1080
+TrackIndex=1
+RecType=Standard
+RecRescaleRes=2560x1080
+RecTracks=1
+FLVTrack=1
+FFOutputToFile=true
+FFFormat=
+FFFormatMimeType=
+FFRescaleRes=2560x1080
+FFVEncoderId=0
+FFVEncoder=
+FFAEncoderId=0
+FFAEncoder=
+FFAudioMixes=1
+VodTrackIndex=2
