--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -17,7 +17,7 @@
 
     },
     "terminal.integrated.shell.osx": "/bin/zsh",
-    "workbench.colorTheme": "Solarized Dark",
+    "workbench.colorTheme": "Default Dark+",
     "open-in-browser.default": "firefox",
     "editor.fontFamily": "'Fira Code', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
     "editor.fontLigatures": true,
@@ -38,8 +38,8 @@
     "workbench.editor.showTabs": true,
     "breadcrumbs.enabled": false,
     "workbench.iconTheme": "vscode-icons",
-    "window.zoomLevel": 1,
     "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue"
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "window.zoomLevel": -2
 }
 
