--- a/dotfiles/.aliasesrc
+++ b/dotfiles/.aliasesrc
@@ -6,6 +6,6 @@ alias psg="ps aux | grep "
 alias c="code ."
 alias r="rubymine ."
 alias p="pycharm-professional ."
-alias loca="cd ~/Workspace/Loca"
+alias work="cd ~/Workspace/Work"
 alias my="cd ~/Workspace/My"
 alias add="ssh-add ~/.ssh/id_rsa_gateway"
