--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -7,11 +7,16 @@
         105
     ],
     "explorer.confirmDragAndDrop": false,
-    "editor.tabSize": 4,
+    "editor.tabSize": 2,
     "explorer.confirmDelete": false,
-    "launch": {},
+    "launch": {
+
+
+
+    
+    },
     "terminal.integrated.shell.osx": "/bin/zsh",
-    "workbench.colorTheme": "Solarized Dark",
+    "workbench.colorTheme": "Material Theme Darker",
     "open-in-browser.default": "firefox",
     "editor.fontFamily": "'Fira Code', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
     "editor.fontLigatures": true,
@@ -30,15 +35,14 @@
     "gitlens.defaultTimeFormat": null,
     "diffEditor.maxComputationTime": 0,
     "workbench.editor.showTabs": true,
-    "breadcrumbs.enabled": false,
-    "workbench.iconTheme": "vscode-icons",
+    "workbench.iconTheme": "material-icon-theme",
     "editor.suggestSelection": "first",
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "[dart]": {
         "editor.formatOnSave": true,
         "editor.formatOnType": true,
         "editor.rulers": [
-            80
+            120
         ],
         "editor.selectionHighlight": false,
         "editor.suggest.snippetsPreventQuickSuggestions": false,
@@ -46,23 +50,31 @@
         "editor.tabCompletion": "onlySnippets",
         "editor.wordBasedSuggestions": false
     },
-    "window.zoomLevel": 1,
-    "editor.formatOnSave": true,
-    "python.pythonPath": "./workspace_venv/bin/python3",
-    "python.formatting.provider": "black",
-    "python.formatting.blackArgs": [
-        "--line-length=150"
-    ],
-    "python.sortImports.args": [
-        "--profile",
-        "black"
-    ],
-    "[python]": {
-        "editor.codeActionsOnSave": {
-            "source.organizeImports": true
-        }
+    "editor.inlineSuggest.enabled": true,
+    "github.copilot.enable": {
+        "*": true,
+        "yaml": true,
+        "plaintext": false,
+        "markdown": false,
+        "python": true
     },
-    "files.associations": {
-        "*.toml": "ini",
-    },
+    // "editor.formatOnSave": false,
+    // "python.pythonPath": "./workspace_venv/bin/python3",
+    // "python.formatting.provider": "black",
+    // "python.formatting.blackArgs": [
+    //     "--line-length=150"
+    // ],
+    // "python.sortImports.args": [
+    //     "--profile",
+    //     "black"
+    // ],
+    // "[python]": {
+    //     "editor.codeActionsOnSave": {
+    //         "source.organizeImports": true
+    //     }
+    // },
+    // "files.associations": {
+    //     "*.toml": "ini",
+    // },
+    // "python.defaultInterpreterPath": "./workspace_venv/bin/python3",
 }
