feat: update theme

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -39,11 +39,11 @@
 
 [user]
 	name = Filipe Crespo
-	email = filipe.crespo@faci.ly
+	email = filipe.crespo@saudetrevo.com.br
 
 [github]
 	user = Filipe Crespo
-	email = filipe.crespo@faci.ly
+	email = filipesoares.crespo@gmail.com
 
 [apply]
   whitespace = nowarn
